provisioning of n flights with custom queries